@@ -3,6 +3,9 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2008/09/05
+	* Rev. 13192 Updated mmo.h, increased merc max count to 36. [L0ne_W0lf]
+	* Fixed save crash related to non-guilded mercenaries.
 2008/09/01
 	* Removed hardcoded equip position names from getequipname (bugreport:2156)
 	- now it's the npc's responsibility to store and display the names
