@@ -107,7 +107,7 @@
 //Mercenary System
 #define MC_SKILLBASE 8201
 #define MAX_MERCSKILL 37
-#define MAX_MERCENARY_CLASS 30
+#define MAX_MERCENARY_CLASS 36
 
 enum item_types {
 	IT_HEALING = 0,
